--- a/mugshot.org
+++ b/mugshot.org
@@ -36,7 +36,6 @@ This program requires a few installations
  - ffmpeg 
  - vtracer [[https://github.com/visioncortex/vtracer]]
 
-
 * ns
 #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
 (ns mugshot.main
@@ -73,21 +72,30 @@ This program requires a few installations
       (s/replace #"&" "and")
       (s/replace #" " "-")))
 
-(defn delete [fname]
+(defn delete! [fname]
   (sh "rm" fname))
 
 #+END_SRC
 
 * url-data
+There are two different meanings to URL in this program.
+
+The first is the user supplied URL. This is what you get when you copy a URL using the Youtube interface.
+
+The second is the 'canonical URL' which ytdl fetches for you. 
+
+It is the second URL that must be passed into ffmpeg in order to download the contents.
+
+Any time url is used, that refers to the user-supplied url.
+Video-url refers to the canonical url.
+
 #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
-(defn yt-playlist [url start end]
-  (let [output (-> (sh "youtube-dl" "-e" "-g" 
-                       "--playlist-start" (str start)
-                       "--playlist-end" (str end) url)
-                   (:out)
-                   (s/split-lines))]
-    (mapv #(zipmap [:title :video-url] (drop-last %))
-          (partition 3 output))))
+(defn parse-url [url]
+  (let [[url & rest] (s/split url #"[\?&]")
+        xr (map #(s/split % #"=") rest)
+        keys (map keyword (into [:url] (map first xr)))
+        vals (into [url] (map second xr))]
+    (zipmap keys vals)))
 
 (defn yt-url->video-data [url]
   (let [[title video-url _ descr]
@@ -98,56 +106,40 @@ This program requires a few installations
      :descr descr
      :video-url video-url}))
 
-(defn parse-url [url]
-  (let [[url & rest] (s/split url #"[\?&]")
-        xr (map #(s/split % #"=") rest)
-        keys (map keyword (into [:url] (map first xr)))
-        vals (into [url] (map second xr))]
-    (zipmap keys vals)))
-
 #+END_SRC
 
 * image
 #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
-(defn save-image [vid-url time fname]
+(defn save-image! [video-url time fname]
   (sh "ffmpeg" 
       "-ss" time
-      "-i" vid-url
+      "-i" video-url
       "-vframes" "1" 
       "-s" "1920x1080" 
       "-f" "image2" fname))
 
-(defn img->svg-old [fname]
-  (sh "./potrace" 
-      "--tight"
-      "--unit" "0.5"
-      "--svg"
-      "--flat" fname)
-  (delete fname)
-  (str (first (s/split fname #"\.")) ".svg"))
-
-(defn img->svg [fname & color?]
+(defn img->svg! [fname & color?]
   (let [new-fname (str (first (s/split fname #"\.")) ".svg")
         settings (if (first color?) 
-                   ["color" "-p" "7" "-f" "16" "-g" "36"] 
+                   ["color" "-p" "7" "-f" "16" "-g" "36"]
                    ["bw"])]
-    (apply sh (concat ["./vtracer"
+    (apply sh (concat ["vtracer"
                        "--mode" "polygon"
                        "--colormode"]
                       settings
                       ["--input" fname
                        "--output" new-fname]))
-    (delete fname)
+    (delete! fname)
     new-fname))
 
 (defn screenshot! [url]
   (let [urlp (parse-url url)
         data (yt-url->video-data (:url urlp))
-        vid-url (:video-url data)
+        video-url (:video-url data)
         name (clean-name (:title data))
         time (seconds->timestamp (read-string (:t urlp)))
         fname (str "output/" name ".png")]
-    (save-image vid-url time fname)
+    (save-image! video-url time fname)
     fname))
 
 #+END_SRC
@@ -202,7 +194,6 @@ This program requires a few installations
       (s/replace #"[A-DF-Za-df-z]" #(str "\n" %))
       (s/triml)
       (s/split-lines)
-      #_(linify)
       (#(map get-numbers %))
       (#(filter (complement empty?) %))
       (#(mapv add-z %))))
@@ -260,59 +251,58 @@ Remove frames and blobs near the outer portions of the screenshot.
 
 #+END_SRC
 
-* mug-urls
-#+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
-(def mug-a (url->svg "https://youtu.be/IPAr7YazehQ?t=209"))
-(def mug-b (url->svg "https://youtu.be/u6B0tXrIpLY?t=495"))
-(def mug-c (url->svg "https://youtu.be/SgAXQRXmWMk?t=239"))
+* mugs-output
+** mug-urls
+ #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
+ ;; as of 2020-11-04
+ (def drawfee-extra-mug-urls
+   ["https://youtu.be/IPAr7YazehQ?t=209"
+    "https://youtu.be/u6B0tXrIpLY?t=495"
+    "https://youtu.be/SgAXQRXmWMk?t=239"
+    "https://youtu.be/2q219S-odkQ?t=1011"
+    "https://youtu.be/q39D7rwH308?t=424"
+    "https://youtu.be/oRlIqf0V9EE?t=305"
+    "https://youtu.be/6xO63fbXhDY?t=461"
+    "https://youtu.be/jnLoT9koWsw?t=401"
+    "https://youtu.be/jPCT63Rj3vA?t=455"
+    "https://youtu.be/QXOiN7IYAUk?t=446"
+    "https://youtu.be/i4clQyKVdoc?t=300"
+    "https://youtu.be/qPFW6B0OmG0?t=356"
+    "https://youtu.be/qPFW6B0OmG0?t=838"
+    "https://youtu.be/g30jp3WWXZ4?t=758"])
 
-;; as of 2020-11-04
-(def drawfee-extra-mug-urls
-  ["https://youtu.be/IPAr7YazehQ?t=209"
-   "https://youtu.be/u6B0tXrIpLY?t=495"
-   "https://youtu.be/SgAXQRXmWMk?t=239"
-   "https://youtu.be/2q219S-odkQ?t=1011"
-   "https://youtu.be/q39D7rwH308?t=424"
-   "https://youtu.be/oRlIqf0V9EE?t=305"
-   "https://youtu.be/6xO63fbXhDY?t=461"
-   "https://youtu.be/jnLoT9koWsw?t=401"
-   "https://youtu.be/jPCT63Rj3vA?t=455"
-   "https://youtu.be/QXOiN7IYAUk?t=446"
-   "https://youtu.be/i4clQyKVdoc?t=310"
-   "https://youtu.be/qPFW6B0OmG0?t=356"
-   "https://youtu.be/qPFW6B0OmG0?t=838"
-   "https://youtu.be/g30jp3WWXZ4?t=758"])
+ ;; as of 2020-11-04
+ (def old-drawfee-streams-mug-urls
+   ["https://youtu.be/4G7saDnPK1Q?t=354"
+    "https://youtu.be/syR9Ritno_k?t=238"
+    "https://youtu.be/d1am7JDMJZc?t=572"
+    "https://youtu.be/SkuFbcIIBCI?t=529"
+    "https://youtu.be/RyEqSUKAuFs?t=251"
+    "https://youtu.be/mi4jBM4VO2I?t=332"
+    "https://youtu.be/A87_voIuo6o?t=390"
+    "https://youtu.be/xWTyfvAL_kU?t=446"
+    "https://youtu.be/tnMtRZ3zRkg?t=247"
+    "https://youtu.be/ozmOzZ2tfMc?t=342"
+    "https://youtu.be/GI5vpRHMQLM?t=339"
+    "https://youtu.be/QKxERLsrVlI?t=394"
+    "https://youtu.be/BTbb7Qa5xH4?t=132"
+    "https://youtu.be/87nUl98pTrU?t=303"
+    "https://youtu.be/ADvr13cZw90?t=336"
+    "https://youtu.be/qGnsMMOOPKo?t=209"
+    "https://youtu.be/4kcIZDUb4fo?t=173"])
 
-;; as of 2020-11-04
-(def old-drawfee-streams-mug-urls
-  ["https://youtu.be/4G7saDnPK1Q?t=354"
-   "https://youtu.be/syR9Ritno_k?t=238"
-   "https://youtu.be/d1am7JDMJZc?t=572"
-   "https://youtu.be/SkuFbcIIBCI?t=529"
-   "https://youtu.be/RyEqSUKAuFs?t=251"
-   "https://youtu.be/mi4jBM4VO2I?t=332"
-   "https://youtu.be/A87_voIuo6o?t=390"
-   "https://youtu.be/xWTyfvAL_kU?t=446"
-   "https://youtu.be/tnMtRZ3zRkg?t=247"
-   "https://youtu.be/ozmOzZ2tfMc?t=342"
-   "https://youtu.be/GI5vpRHMQLM?t=339"
-   "https://youtu.be/QKxERLsrVlI?t=394"
-   "https://youtu.be/BTbb7Qa5xH4?t=132"
-   "https://youtu.be/87nUl98pTrU?t=303"
-   "https://youtu.be/ADvr13cZw90?t=336"
-   "https://youtu.be/qGnsMMOOPKo?t=209"
-   "https://youtu.be/4kcIZDUb4fo?t=173"])
+ (def color-mugs
+  ["https://youtu.be/k4Ox4S-aAL4?t=97"])
 
-#+END_SRC
+ #+END_SRC
 
-* drawfee-mugs-output
 ** basic-paths
 #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
 (defn url->svg
   [url]
   (-> url
       (screenshot!)
-      (img->svg)
+      (img->svg!)
       (slurp)))
 
 (defn svg->mug-pts
@@ -327,25 +317,28 @@ Remove frames and blobs near the outer portions of the screenshot.
   [pts]
   (->> pts
        (apply f/polygon2)))
-#+END_SRC
-
-** save-svg
-#+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
-(defn svg!
-  [name & content]
-  (let [fname (str name ".svg")]
-    (spit fname (html content))
-    fname))
 
 #+END_SRC
 
 ** 2d-view-transforms
+I have a path-polygon implementation saved here because I have to re-work the path-polygon impl in stylo.
+
+Here, I do NOT transform the path to its own midpoint. I DO move paths upon generation in the stylo library (NOTE: This behaviour should change in stylo to not move the given points at all).
+
+#+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
+(defn path-polygon
+  [& pts]
+  (let [paths (map svg/path-polygon-str pts)]
+    (svg/path (apply str (interpose "\n" paths)))))
+
+#+END_SRC
+
 #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
 (defn mug-pts->polygon2d-front
   [pts]
   (->> pts
        (mapv #(mapv drop-z %))
-       (#(mapv svg/path-polygon %))
+       (#(mapv path-polygon %))
        (#(apply svg/merge-paths %))))
 
 (defn simple-translate
@@ -360,7 +353,7 @@ Remove frames and blobs near the outer portions of the screenshot.
          (mapv #(shape/isometric-xf %))
          (mapv #(simple-translate [mx my 0] %))
          (mapv #(mapv drop-z %))
-         (#(mapv svg/path-polygon %))
+         (#(mapv path-polygon %))
          (#(apply svg/merge-paths %)))))
 
 (defn mug-pts->polygon2d-right
@@ -382,7 +375,7 @@ Remove frames and blobs near the outer portions of the screenshot.
          (mapv #(shape/rotate-points % [0 180 0]))
          (mapv #(simple-translate [mx my 0] %))
          (mapv #(mapv drop-z %))
-         (#(mapv svg/path-polygon %))
+         (#(mapv path-polygon %))
          (#(apply svg/merge-paths %)))))
 
 #+END_SRC
@@ -405,6 +398,7 @@ html {
   border-radius: 12px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg);
 }
 .card:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -454,35 +448,39 @@ html {
                  (svg->mug-pts)
                  (resize 225)
                  (mug-pts->polygon2d-front)
-                 (svg/style-element {:fill "black"})
+                 (svg/style-element {:fill "#2e3440"})
                  (svg/dwg-2d [350 350 1]))]
     [:div.card
      [:a {:href url} drw]
-     [:h4.title (hiccup.util/escape-html (:title data))]
-     #_[:p (:descr data)]]))
+     [:h4.title (hiccup.util/escape-html (:title data))]]))
 
-(def mug-cache
-  (into 
-   []
-   (for [url (concat drawfee-extra-mug-urls
-                     old-drawfee-streams-mug-urls)]
-     (try
-       (url->card url)
-       (catch Exception e
-         nil)))))
-
-(defn save-cache! []
-  (spit "cache.edn" mug-cache))
+(defn try-url->card
+  [url]
+  (try (url->card url)
+       (catch Exception e nil)))
 
 (defn save-index! []
-  (->> mug-cache
-       (into [:div.container])
-       (html!)))
+  (let [urls (concat drawfee-extra-mug-urls
+                     old-drawfee-streams-mug-urls)]
+    (->> urls
+         (pmap try-url->card)
+         (into [:div.container])
+         (html!))))
 
 #+END_SRC
 
 * demos
-** url-demo
+** save-svg
+#+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
+(defn svg!
+  [name & content]
+  (let [fname (str name ".svg")]
+    (spit fname (html content))
+    fname))
+
+#+END_SRC
+
+** spin-animation
 #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
 (defn drawfee-demo!
   [url]
@@ -544,6 +542,10 @@ html {
     [(mapv first padded)
      (mapv second padded)]))
 
+(def svga (slurp "output/drawing-a-fancy-animal-party.svg"))
+(def svgb (slurp "output/anarchy-night-in-the-ladies-jurisdiction.svg"))
+(def svgc (slurp "output/cringetober-drawings.svg"))
+
 (defn drawfee-demo2!
   [svg1 svg2 svg3]
   (let [pts1 (->> svg1 (svg->mug-pts))
@@ -580,25 +582,36 @@ html {
            [1920 1080 0.5]
            (svg/g
             (->> anim
-                 (svg/style-element {:stroke "none"
+                 (svg/style-element {:transform "translate(500,500)"
+                                     :stroke "none"
                                      :fill "hotpink"})))))))
 
 #+END_SRC
 
-* test-urls
-
-needs frame removal:
-https://youtu.be/u6B0tXrIpLY?t=495
-
-full colour:
-https://youtu.be/k4Ox4S-aAL4?t=97
-
+** isometric-card
 #+BEGIN_SRC clojure :tangle ./src/mugshot/main.clj
-(def mug-url "https://youtu.be/IPAr7YazehQ?t=209")
+(def a (slurp "output/cringetober-drawings.svg"))
+(defn isometric-card-demo!
+  [svg]
+  (let [pts (->> svg
+                 (svg->mug-pts)
+                 (move-to-origin)
+                 (resize 100))
+        mug1 (->> pts (mug-pts->polygon2d-front) (svg/rotate 180))
+        mug2 (->> pts (mug-pts->polygon2d-iso) (svg/rotate 180))
+        p1 (get-in mug1 [1 :d])
+        p2 (get-in mug2 [1 :d])
+        anim [:path {:d p1}
+              [:animate {:attributeName "d"
+                         :values (str "\n" p1 ";\n" p2 ";\n" p1)
+                         :dur "4s"
+                         :repeatCount "indefinite"}]]]
+    (svg! "output/asdf"
+          (svg/dwg-2d
+           [300 420 1]
+           (svg/g
+            (->> mug2
+                 (svg/style-element {:stroke "none"
+                                     :fill "#2e3440"})))))))
 
-;; a large drawing:
-;; Https://youtu.be/2q219S-odkQ?t=7873
-
-;; a mug:
-;; https://youtu.be/IPAr7YazehQ?t=209
 #+END_SRC
